--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color switcher</title>
-    <link rel="stylesheet" href="css/common.css" />
-  </head>
-  <body>
-    <p><a href="index.html">Go back</a></p>
 
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Color switcher</title>
+  <link rel="stylesheet" href="css/common.css" />
+</head>
 
-    <script src="js/01-color-switcher.js" type="module"></script>
-  </body>
+<body>
+  <p><a href="index.html">Go back</a></p>
+  <p class="color-number js-color-number-rgb"></p>
+  <p class="color-number js-color-number-hex"></p>
+  <div class="button-container">
+    <button class="btn" type="button" data-start>Start</button>
+    <button class="btn" type="button" data-stop disabled>Stop</button>
+  </div>
+
+  <script src="js/01-color-switcher.js" type="module"></script>
+</body>
+
 </html>
