--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -10,8 +10,13 @@
 
 <body>
   <p><a href="index.html">Go back</a></p>
-  <p class="color-number js-color-number-rgb"></p>
-  <p class="color-number js-color-number-hex"></p>
+  <p class="color-number js-color-number-rgb">Press start</p>
+  <p class="color-number js-color-number-hex">👇</p>
+  <label>
+    <b>Color change rate on: <span class="rate-time">1</span>sec</b>
+    <input type="range" min="800" max="3000" value="1000" />
+  </label>
+
   <div class="button-container">
     <button class="btn" type="button" data-start>Start</button>
     <button class="btn" type="button" data-stop disabled>Stop</button>
