--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -13,6 +13,7 @@
 
   <input type="text" id="datetime-picker" />
   <button type="button" data-start disabled>Start</button>
+  <button type="button" data-stop>Reset</button>
 
   <div class="timer">
     <div class="field">
@@ -32,6 +33,7 @@
       <span class="label">Seconds</span>
     </div>
   </div>
+  <div id="flipdown" class="flipdown"></div>
 
   <script src="js/02-timer.js" type="module"></script>
 </body>
